--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "vite --port=3000",
     "build": "tsc && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview --host 0.0.0.0"
   },
   "dependencies": {
     "react": "^17.0.0",
